--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
+certifi==2021.10.8
 click==7.1.2
+easyocr==1.4.1
 Flask==1.1.2
+gunicorn==20.1.0
+imageio==2.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
 kaleido==0.2.1
 MarkupSafe==1.1.1
+networkx==2.7.1
 numpy==1.20.2
+packaging==21.3
 pandas==1.2.3
 plotly==4.14.3
+python-bidi==0.4.2
 python-dateutil==2.8.1
 pytz==2021.1
+PyWavelets==1.3.0
 retrying==1.3.3
+scikit-image==0.19.2
 scikit-learn==0.24.1
 scipy==1.6.2
 six==1.15.0
 threadpoolctl==2.1.0
+tifffile==2022.3.16
+torch==1.11.0
+torchvision==0.12.0
 Werkzeug==1.0.1
+wincertstore==0.2
